Fixed layout issue on authenticate screen on Windows machines

--- a/src/css/popup.css
+++ b/src/css/popup.css
@@ -87,7 +87,7 @@ button {
 
 .authenticate p {
 	margin: 0 auto;
-	width: 230px;
+	width: 235px;
 }
 
 .authenticate .description {
